# VulkanEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-build-linux.yml  cmake-build-windows.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake_build_Linux
resources/: house.vox
resources/shaders/GLSL/: frag.spv  shader.frag  shader.vert  vert.spv
src/: main.cpp
src/Client/: main.cpp
src/Core/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.cpp  Timer.h  Window.cpp  Window.h  vepch.h
src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Core/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
src/Core/Renderer/: GraphicsContext.cpp  GraphicsContext.h  Model.cpp  Model.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  Vertex.h  VoxelModel.cpp  VoxelModel.h
src/Core/Renderer/RenderAPI/Vulkan/: UniformBufferObject.h  Vertex.h  VulkanAPI.cpp  VulkanAPI.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanModel.cpp  VulkanModel.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanResource.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  (+24 more)
src/Core/Renderer/RenderAPI/Vulkan/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp
src/Core/Renderer/Shaders/GLSL/: compile.bat
src/Core/SceneGraph/: MeshNode.cpp  MeshNode.h  SceneGraph.cpp  SceneGraph.h
test/: EventUnitTests.cpp  TimerUnitTests.cpp  VE_UnitTest.cpp  WindowingUnitTests.cpp
